2007-02-05  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in: Remove NetworkManager from extras, seahorse
	from fifth toe.

2007-02-05  Danilo Šegan  <danilo@gnome.org>

	Fix #404219.

	* people.py (get_roles_for):
	* templates/person.tmpl: Use nospam obfuscating for bugzilla account.

2007-02-05  Danilo Šegan  <danilo@gnome.org>

	* .htaccess: Set DirectoryIndex to index.py.
	* index.py:
	* templates/index.tmpl: Added.

2007-02-05  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Update Galician team data.

	* templates/language-release-ui-stats.tmpl: Use ui_supportedness,
	not doc (fix #401699).

2007-02-04  Vincent Untz  <vuntz@gnome.org>

	* translation-teams.xml.in: add more infos about the French team

2007-02-04  Vincent Untz  <vuntz@gnome.org>

	* people.xml.in: add myself
	* gnome-modules.xml.in: put myself maintainers on some modules.

2007-01-28  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Update Polish team webpages.

2007-01-28  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Move gfloppy manual into gnome-utils.

	* releases.xml.in: Follow 2.18 module decisions.

2007-01-28  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in: Use trunk for gnome-system-tools in 2.18.

2007-01-26  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Fix f-spot manual description.

2007-01-23  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Add f-spot, dasher docs.

2007-01-13  Danilo Šegan  <danilo@gnome.org>

	* l10n.py (trans): Optimize to load MO file only once.

2007-01-13  Danilo Šegan  <danilo@gnome.org>

	* releases.xml.in:
	* gnome-modules.xml.in: Branch libwnck for gnome-2-16.

2007-01-13  Danilo Šegan  <danilo@gnome.org>

	* gnome-modules.xml.in: Add damned-lies.

2007-01-13  Danilo Šegan  <danilo@gnome.org>

	* accept.py: Import from ViewCVS to handle Accept-Language.

	* templates/, *.py: Added i18n support.
	* po/: Added i18n infrastructure.
