@@ -94,7 +94,7 @@ img {
 div.maintainer {
   height: 85px; 
   padding-left: 85px; 
-  background-image: url('/~danilo/damned-lies/data/nobody.png');
+  background-image: url('data/nobody.png');
   background-repeat: no-repeat;
-  background-position: -85px left; 
+  background-position: 85px left; 
 }
