@@ -3,7 +3,7 @@
   <defaults>
     <person>
       <email>%(person)@gnome.org</email>
-      <icon>/~danilo/damned-lies/data/nobody.png</icon>
+      <icon>data/nobody.png</icon>
       <cvs-account>%(person/id)</cvs-account>
       <webpage></webpage>
       <im></im>
