@@ -1,3 +1,8 @@
+2007-02-05  David Lodge <dave@cirt.net>
+
+	* data/main.css: Fixed div.maintainer causing invalid CSS and corrected url
+	* people.xml.in: Fixed default icon to read from the data directory
+
 2007-02-05  Danilo Šegan  <danilo@gnome.org>
 
 	* releases.xml.in: Remove NetworkManager from extras, seahorse
